experiments with build (graal, javafx)