@@ -1,23 +1,115 @@
 plugins {
     id 'java'
-    //id 'org.openjfx.javafxplugin' version '0.0.7'
+//    id 'org.openjfx.javafxplugin'
     id 'application'
 }
 
 
-//javafx {
-//    version = "12.0.1"
-//    modules = ['javafx.controls']
-//}
+
 
 application {
-    applicationDefaultJvmArgs = ['-Xss512m','-Xmx2g', '-XX:+UseG1GC']
+//    applicationDefaultJvmArgs = ['-Xss512m','-Xmx2g', '-XX:+UseG1GC']
+    applicationDefaultJvmArgs = ['-Xss512m','-Xmx2g',
+                                 '-XX:+UseG1GC' ,
+                                 '-XX:+UnlockDiagnosticVMOptions' ,
+            '-XX:+TraceClassLoading',
+            '-XX:+LogCompilation' ,
+            '-XX:+PrintAssembly']
+
     mainClassName = 'pl.setblack.etalife.LifeWindow'
 }
 
 dependencies {
     // https://mvnrepository.com/artifact/org.openjfx/javafx-controls
     compile group: 'org.openjfx', name: 'javafx-controls', version: '12'
-
+    compile files('libs/something_local.jar')
     compile project(':etaCode')
 }
+
+task customFatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'pl.setblack.etalife.LifeWindow'
+    }
+    baseName = 'etaLife'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+
+compileJava {
+  //  inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', '/opt/java/jfx/javafx-sdk-11.0.2/lib',
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.web',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.media'
+        ]
+        //classpath = files()
+    }
+}
+
+//compileTestJava {
+//    inputs.property("moduleName", moduleName)
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'javafx.controls',
+//                '--add-modules', 'javafx.fxml',
+//                '--add-modules', 'javafx.web',
+//                '--add-modules', 'javafx.graphics',
+//                '--add-modules', 'javafx.media',
+//                '--add-modules', 'org.junit.jupiter.api',
+//                '--add-reads', "$moduleName=org.junit.jupiter.api",
+//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+//        ]
+//        classpath = files()
+//    }
+//}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', '/opt/java/jfx/javafx-sdk-11.0.2/lib',
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.web',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.media',
+                '-Djava.library.path=/opt/java/tools',
+                '-Xss512m',
+                '-Xmx4g',
+                '-XX:+UseG1GC',
+                '-XX:+PrintCompilation',
+
+                '-Xshare:off',
+
+                '-XX:+UnlockExperimentalVMOptions',
+                '-XX:+EnableJVMCI', '-XX:+UseJVMCICompiler'
+//                '-XX:+UseG1GC' ,
+//                '-XX:+UnlockDiagnosticVMOptions' ,
+//                '-XX:+TraceClassLoading',
+//                '-XX:+LogCompilation' ,
+//                '-XX:+PrintAssembly'
+        ]
+    }
+}
+
+
+
+//test {
+//    useJUnitPlatform()
+//
+//    doFirst {
+//        jvmArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'javafx.controls',
+//                '--add-modules', 'javafx.fxml',
+//                '--add-modules', 'javafx.web',
+//                '--add-modules', 'javafx.graphics',
+//                '--add-modules', 'javafx.media'
+//        ]
+//    }
+//}
